maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
var x = 0
^ShortestPathMaze:2: error: expected class or object definition
var x = 0
^ShortestPathMaze:3: error: expected class or object definition
var y = 0 
^ShortestPathMaze:4: error: expected class or object definition
var sol = 0
^ShortestPathMaze:6: error: expected start of definition
override def run() {
         ^ShortestPathMaze:12: error: expected class or object definition
def marquage(x:Int,y:Int,sol:Int){
^